Changes the src and build dirs

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,600&display=swap" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/animon@1.0.1/dist/animon.css"/>
-  </head>
+  <script type="module" crossorigin src="/assets/index.40e18a1b.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.56985745.js">
+  <link rel="stylesheet" href="/assets/index.7b4ec3ba.css">
+</head>
   <body>
     <header class="header">
       <div class="container">
         <h1 class="header__logo">
           <a href="#intro">
-            <img src="./assets/animon_logo.svg" alt="Animon" width="160"/>
+            <img src="/assets/animon_logo.e8bac46b.svg" alt="Animon" width="160"/>
           </a>
         </h1>
         <nav class="nav">
@@ -48,7 +51,7 @@
               <p class="animonItem" data-delay="800"><a href="#usage">Learn how to use it</a>.</p>
           </div>
           <div class="col col--half">
-              <img src="./assets/braino.png" alt="" class="animonItem" data-delay="200" data-effect="scaleUp"/>
+              <img src="/assets/braino.c9cb7034.png" alt="" class="animonItem" data-delay="200" data-effect="scaleUp"/>
           </div>
         </div>
       </section>
@@ -155,6 +158,6 @@
     <footer class="footer">
       <div class="container animonItem">Made with love by <a href="https://github.com/bnthor" target="_blank">bnthor</a></div>
     </footer>
-    <script type="module" src="./main.js"></script>
+    
   </body>
 </html>
