--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/docs/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 
@@ -10,16 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,600&display=swap" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/animon@1.0.1/dist/animon.css"/>
-  <script type="module" crossorigin src="/docs/assets/index.40e18a1b.js"></script>
-  <link rel="modulepreload" href="/docs/assets/vendor.56985745.js">
-  <link rel="stylesheet" href="/docs/assets/index.7b4ec3ba.css">
-</head>
+  </head>
   <body>
     <header class="header">
       <div class="container">
         <h1 class="header__logo">
           <a href="#intro">
-            <img src="/docs/assets/animon_logo.e8bac46b.svg" alt="Animon" width="160"/>
+            <img src="./assets/animon_logo.svg" alt="Animon" width="160"/>
           </a>
         </h1>
         <nav class="nav">
@@ -51,7 +48,7 @@
               <p class="animonItem" data-delay="800"><a href="#usage">Learn how to use it</a>.</p>
           </div>
           <div class="col col--half">
-              <img src="/docs/assets/braino.c9cb7034.png" alt="" class="animonItem" data-delay="200" data-effect="scaleUp"/>
+              <img src="./assets/braino.png" alt="" class="animonItem" data-delay="200" data-effect="scaleUp"/>
           </div>
         </div>
       </section>
@@ -158,6 +155,6 @@
     <footer class="footer">
       <div class="container animonItem">Made with love by <a href="https://github.com/bnthor" target="_blank">bnthor</a></div>
     </footer>
-    
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
