--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Animon</title>
+    <meta name="description" content="Animate DOM elements when they appear in the viewport with simple html attributes"/>
+
+    <meta property="og:locale" content="fr">
+    <meta property="og:site_name" content="Animon">
+    <meta property="og:title" content="Animon">
+    <meta property="og:url" content="https://bnthor.github.io/animon-site">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Animate DOM elements when they appear in the viewport with simple html attributes">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Animon">
+    <meta name="twitter:url" content="https://bnthor.github.io/animon-site">
+    <meta name="twitter:description" content="Animate DOM elements when they appear in the viewport with simple html attributes">
+    <meta name="twitter:dnt" content="on">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,600&display=swap" rel="stylesheet">
