Adds documentation and social sharing meta

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,14 @@
     <meta property="og:url" content="https://bnthor.github.io/animon-site">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Animate DOM elements when they appear in the viewport with simple html attributes">
+    <meta property="og:image:url" content="https://bnthor.github.io/animon-site/assets/social_banner.jpg">
+    <meta property="og:image" content="https://bnthor.github.io/animon-site/assets/social_banner.jpg">
 
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Animon">
     <meta name="twitter:url" content="https://bnthor.github.io/animon-site">
     <meta name="twitter:description" content="Animate DOM elements when they appear in the viewport with simple html attributes">
+    <meta name="twitter:image" content="https://bnthor.github.io/animon-site/assets/social_banner.jpg">
     <meta name="twitter:dnt" content="on">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
