Builds the social banner into homepage

--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
     <meta property="og:url" content="https://bnthor.github.io/animon-site">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Animate DOM elements when they appear in the viewport with simple html attributes">
+    <meta property="og:image:url" content="https://bnthor.github.io/animon-site/assets/social_banner.jpg">
+    <meta property="og:image" content="https://bnthor.github.io/animon-site/assets/social_banner.jpg">
 
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Animon">
     <meta name="twitter:url" content="https://bnthor.github.io/animon-site">
     <meta name="twitter:description" content="Animate DOM elements when they appear in the viewport with simple html attributes">
+    <meta name="twitter:image" content="https://bnthor.github.io/animon-site/assets/social_banner.jpg">
     <meta name="twitter:dnt" content="on">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,600&display=swap" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/animon@1.0.1/dist/animon.css"/>
-  <script type="module" crossorigin src="/animon-site/assets/index.40e18a1b.js"></script>
-  <link rel="modulepreload" href="/animon-site/assets/vendor.56985745.js">
+  <script type="module" crossorigin src="/animon-site/assets/index.0fbf8d3d.js"></script>
+  <link rel="modulepreload" href="/animon-site/assets/vendor.38d5dcee.js">
   <link rel="stylesheet" href="/animon-site/assets/index.7b4ec3ba.css">
 </head>
   <body>
